--- a/style/media.css
+++ b/style/media.css
@@ -1,13 +1,210 @@
-@media(max-width: 1250px) {
-    .about_box {
-        margin: 0 auto;
-        max-width: 800px;
-        flex-wrap: wrap;
+@media (max-width: 1250px) {
+    .nav_img img {
+        max-width: 1250px;
+        width: 100%;
     }
-}
-@media(max-width: 1150px) {
+    .nav_list {
+        text-align: center;
+    }
+    .nav_logo {
+        text-align: center;
+    }
+
+    .logo_image {
+        width: 140px;
+    }
+
+    .logo_title {
+        font-size: 16px;
+    }
+    .about_box {
+        flex-wrap: wrap;
+        max-width: 700px;
+        width: 100%;
+        margin: 0 auto;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .about_card {
+        width: 320px;
+        height: 350px;
+        margin-bottom: 20px;
+    }
+    .news_right {
+        padding: 20px;
+        max-width: 100%;
+    }
+
     .footer_container {
         flex-direction: column;
+        align-items: center;
+    }
+
+    .footer_list {
+        text-align: center;
+    }
+}
+@media(max-width: 1100px) {
+.news_box {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+}
+@media(max-width: 1000px) {
+    .nav_list {
+        display: block;
+    }
+    .footer_list {
+        max-width: 500px;
         width: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .footer_item {
+
+        margin: 10px;
+    }
+}
+
+@media (max-width: 768px) {
+    .nav_container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .nav_logo {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .logo_image {
+        width: 120px;
+    }
+
+    .logo_title {
+        font-size: 14px;
+    }
+    .nav_list {
+        display: block;
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .news_box {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .news_box img {
+        width: 100%;
+        height: auto;
+    }
+    .about_box {
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+    .about_card {
+        width: 280px;
+        height: 300px;
+    }
+
+    .right_text {
+        text-align: justify;
+        font-size: 16px;
+    }
+
+    .footer_container {
+        flex-direction: column;
+        align-items: center;
+        padding: 15px 0;
+    }
+
+    .footer_list {
+        text-align: center;
+    }
+}
+
+@media (max-width: 480px) {
+    .nav_logo {
+        text-align: center;
+    }
+
+    .nav_item {
+        margin: 10px 0;
+    }
+
+    .nav_link {
+        font-size: 16px;
+    }
+    .nav_logo {
+        text-align: center;
+        margin-top: 10px;
+    }
+    
+    .about_card {
+        width: 250px;
+        height: 280px;
+    }
+    .news_right {
+        padding: 15px;
+    }
+
+    .right_title {
+        font-size: 20px;
+    }
+
+    .right_text {
+        display: -webkit-box;
+        -webkit-line-clamp: 12;
+        -webkit-box-orient: vertical;
+        overflow: scroll;
+        font-size: 16px;
+    }
+    .footer_logo {
+        margin-bottom: 15px;
+    }
+    .footer_list {
+        display: block;
+        text-align: center;
+    }
+
+    .footer_item {
+        margin: 10px 0;
+    }
+}
+@media (max-width: 320px) {
+    .nav_item {
+        font-size: 14px;
+        margin: 5px;
+    }
+    .nav_logo {
+        text-align: center;
+        margin-top: 5px;
+    }
+    .right_title {
+        font-size: 18px;
+    }
+
+    .right_text {
+        font-size: 14px;
+    }
+
+    .about_card {
+        width: 220px;
+        height: 240px;
+    }
+
+    .footer_logo {
+        text-align: center;
+    }
+
+    .footer_list {
+        display: block;
+        text-align: center;
+    }
+
+    .footer_item {
+        margin: 5px 0;
     }
 }
